# fluxor

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  clippy.toml  fluxor.toml  memory-bcm2712.x  memory-rp2040.x  memory-rp2350.x  rust-toolchain.toml
.cargo/: config.toml
contracts/: Cargo.toml  vocabulary_map.toml
contracts/src/: lib.rs  observability.rs  vocabulary.rs
crates/fluxor-abi/: Cargo.toml
crates/fluxor-abi/src/: lib.rs
crates/fluxor-sdk/: Cargo.toml  builtin  sdk
crates/fluxor-sdk/src/: lib.rs
docs/: overview.md  vision.md
docs/architecture/: abi_layers.md  av_capability_surface.md  browser_capability_surface.md  capability_surface.md  concurrency.md  datagram_secure_transports.md  device_classes.md  endpoint_capability_surface.md  events.md  hal_architecture.md  heap.md  http_multiconn.md  input_capability_surface.md  mesh.md  module_architecture.md  monitor-protocol.md  network.md  network_boot.md  pin_allocation.md  pipeline.md  protocol_surfaces.md  reconfigure.md  scheduler.md  security.md  storage_capability_surface.md  timing.md  wasm_browser_host.md  wasm_platform.md
docs/guides/: asset_banks.md  audio.md  codec_porting.md  compute_heavy_modules.md  displays.md  examples.md  foundation.md  input_gestures.md  input_system.md  midi.md  music_player.md  publishing.md  services.md
examples/: README.md
examples/audio_player/: README.md  cm5-split.yaml  linux.yaml  pico2w-inline.yaml  pico2w.yaml  picow.yaml  wasm-thin.yaml  wasm.yaml
examples/button_control/: README.md  pico2w.yaml
examples/cm5/: audio_player_split.yaml  hello_uart.yaml  http_server.yaml  https_multilane.yaml  https_server.yaml  image_viewer.yaml  log_net.yaml  log_net_monitor.yaml  log_uart.yaml  nic_bypass.yaml
examples/dns_server/: README.md  pico2w.yaml
examples/drums/: README.md
examples/hello/: README.md  cm5.yaml  linux.yaml
examples/image_viewer/: README.md  cm5.yaml  linux.yaml  wasm-shell.yaml  wasm-thin.yaml  wasm.yaml  waveshare-lcd4-inline.yaml  waveshare-lcd4.yaml
examples/led_patterns/: README.md  pico2w.yaml  picow.yaml
examples/linux/: audio_player.yaml  hello_server.yaml  https_server.yaml  image_viewer.yaml
examples/log_net/: README.md  cm5.yaml
examples/midi_echo/: README.md  linux.yaml
examples/mqtt_publisher/: README.md  pico2w.yaml
examples/packet_filter/: README.md  cm5.yaml
examples/pico2w/: audio_player.yaml  audio_player_inline.yaml  blinky.yaml  breathe.yaml  drums.yaml  hello_server.yaml  led_switch.yaml  log_usb.yaml  midi_echo.yaml  synth.yaml
examples/picow/: blinky.yaml  breathe.yaml  drums.yaml  led_switch.yaml  synth.yaml
examples/qemu-virt/: hello_server.yaml  https_server.yaml  multi_domain.yaml
examples/quic_loopback/: README.md  linux.yaml
examples/static_server/: README.md  cm5.yaml  pico2w.yaml
examples/synth/: README.md  pico2w.yaml  picow.yaml
examples/voip_call/: README.md  pico2w.yaml
examples/wasm/: audio_player.yaml  audio_player_thin.yaml  image_viewer.yaml  image_viewer_thin.yaml  midi_echo.yaml
examples/waveshare-lcd4/: image_viewer.yaml  image_viewer_inline.yaml
examples/web_server/: README.md  cm5.yaml  linux.yaml
firmware/: README.md
modules/: mod.rs  module.ld  param_macro.rs  pic_runtime.rs
modules/adc/: mod.rs
modules/bank/: README.md  mod.rs
modules/brightness/: README.md  mod.rs  params_def.rs
modules/button/: manifest.toml  mod.rs
modules/ch9120/: README.md  manifest.toml  mod.rs
modules/cyw43/: manifest.toml  mod.rs  module.ld  wifi_ops.rs
modules/debug/: README.md  manifest.toml  mod.rs
modules/decoder/: manifest.toml  mod.rs  (+1 more)
modules/drivers/nvme/: Cargo.toml  README.md  manifest.toml  mod.rs
modules/foundation/bank/: Cargo.toml  manifest.toml  mod.rs
modules/foundation/dns/: Cargo.toml  README.md  manifest.toml  mod.rs
modules/foundation/fat32/: Cargo.toml  manifest.toml  mod.rs
modules/foundation/http/: Cargo.toml  README.md  client.rs  client_h2.rs  connection.rs  h2.rs  h3.rs  hpack.rs  manifest.toml  mod.rs  qpack.rs  server.rs  wire_h1.rs  wire_h2.rs  wire_h3.rs  wire_ws.rs
modules/foundation/ip/: Cargo.toml  README.md  arp.rs  dhcp.rs  eth.rs  icmp.rs  ipv4.rs  manifest.toml  mod.rs  tcp.rs
modules/foundation/mqtt/: Cargo.toml  README.md  manifest.toml  mod.rs
modules/foundation/object_bank/: Cargo.toml  manifest.toml  mod.rs
modules/foundation/quic/: Cargo.toml  ack.rs  connection.rs  frame.rs  h3.rs  keys.rs  manifest.toml  mod.rs  packet.rs  pump.rs  qpack.rs  streams.rs  wire.rs  ws.rs
modules/foundation/tls/: Cargo.toml  aes_gcm.rs  alert.rs  chacha20.rs  dtls_record.rs  dtls_state.rs  handshake.rs  handshake_driver.rs  handshake_pump.rs  hmac.rs  key_schedule.rs  manifest.toml  mod.rs  p256.rs  record.rs  sha256.rs  x509.rs
modules/foundation/tls/tests/: crypto_kat.rs
modules/foundation/ws_stream/: Cargo.toml  manifest.toml  mod.rs
src/: abi.rs  lib.rs  main.rs
stacks/: audio.toml  debug.toml  display.toml  gamepad.toml  keyboard.toml  midi.toml  net.toml  pointer.toml  storage.toml
tests/: graph_unification.rs
tools/: Cargo.toml
tools/.cargo/: config.toml
tools/src/: asset_bank.rs  board.rs  cargo_index.rs  ci.rs  compose.rs  config.rs  content_render.rs  crypto.rs  error.rs  hardware_expand.rs  hash.rs  hygiene.rs  lib.rs  lockfile.rs  main.rs  manifest.rs  modules.rs  modules_build.rs  monitor.rs  observability.rs  presentation_resolver.rs  presentation_shell.rs  project.rs  project_meta.rs  publish.rs  reconfigure.rs  registry.rs  render_template.rs  scenario.rs  schema.rs  stack_expand.rs  sync.rs  target.rs  text_distance.rs  uf2.rs  up.rs  wasm_bundle.rs  workspace.rs
tools/src/rig/: board.rs  cli.rs  events.rs  lock.rs  matcher.rs  mod.rs  plan.rs  profile.rs  project.rs  record.rs  run.rs  scenario.rs  secret.rs  template.rs  test_utils.rs  validate.rs  vocab.rs
tools/src/rig/backend/: actuator.rs  discover.rs  mod.rs  protocol.rs  transport.rs
tools/tests/: builtin_build_e2e.rs  builtin_param_layout.rs  presentation_group_validate.rs  silicon_toml_shape.rs  wasm_bundle_e2e.rs
(+603 files in other folders)
