[package]
name = "fluxor"
description = "Fluxor"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/nanocloudio/fluxor"

[[bin]]
name = "fluxor"
path = "src/main.rs"
# `src/main.rs` is `#![no_std]` and resolves its platform from the
# `rp` / `chip-bcm2712` features. `embedded-platform` is the umbrella
# any embedded chip feature pulls in; under `host-linux` the bin is
# skipped so cargo test can compile against the lib alone.
required-features = ["embedded-platform"]

[[bin]]
name = "fluxor-linux"
path = "src/platform/linux.rs"
required-features = ["host-linux"]

[lib]
path = "src/lib.rs"

[dependencies]
# --- RP-family dependencies (Cortex-M targets) ---
# Async executor for main task and logger task.
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "defmt"], optional = true }
# Timers for async delays between SD reads.
embassy-time = { version = "0.5.1", features = ["defmt", "defmt-timestamp-uptime"], optional = true }
# RP2350 HAL (SPI, GPIO, USB, DMA, clocks).
# Chip variant (rp235xa or rp235xb) selected via features below.
embassy-rp = { version = "0.10.0", features = ["defmt", "time-driver", "critical-section-impl", "rt", "unstable-pac"], optional = true }
# USB device stack for CDC logging.
embassy-usb = { version = "0.6.0", features = ["defmt"], optional = true }
# USB serial logger implementation.
embassy-usb-logger = { version = "0.6.0", optional = true }
# Minimal async yield helper for syscall polling loops.
embassy-futures = { version = "0.1.2", optional = true }
# Async primitives (signals, channels, mutexes).
embassy-sync = { version = "0.8.0", optional = true }
# Cortex-M core utilities (used for low-level delays).
cortex-m = { version = "0.7.7", optional = true }
# Cortex-M runtime and startup.
cortex-m-rt = { version = "0.7.5", optional = true }
# Static initialization for shared peripherals.
static_cell = { version = "2.1.1", optional = true }
# Structured logging facade used by embassy-usb-logger.
log = "0.4.29"
# defmt logging backend (required by selected embassy features).
defmt = { version = "1.0.1", optional = true }
# RTT logger for early debug output.
defmt-rtt = { version = "1.1.0", optional = true }
# Panic handler with defmt output.
panic-probe = { version = "1.0.0", features = ["print-defmt"], optional = true }
sha2 = { version = "0.11.0", default-features = false, optional = true }
env_logger = { version = "0.11", optional = true }
libc = { version = "0.2", optional = true }
embedded-io-async = { version = "0.7.0", optional = true }
# Portable atomics with CAS emulation for thumbv6m (RP2040 Cortex-M0+).
# On thumbv8m (RP2350) this is a zero-cost pass-through.
portable-atomic = { version = "1.13.1", default-features = false, optional = true }

[features]
default = ["chip-rp2350b"]

# Umbrella feature pulled in by every embedded chip feature; gates the
# `#![no_std]` `fluxor` binary so hosted builds can compile against the
# lib alone.
embedded-platform = []

# RP-family shared dependencies (pulled in by any chip-rp* feature)
rp = [
    "embassy-executor", "embassy-time", "embassy-rp", "embassy-usb",
    "embassy-usb-logger", "embassy-futures", "embassy-sync",
    "cortex-m", "cortex-m-rt", "static_cell",
    "defmt", "defmt-rtt", "panic-probe", "sha2", "embedded-io-async",
    "portable-atomic",
]

# Single binary for both RP2350A and RP2350B. Always compile with B (superset).
# Runtime silicon detection (SYSINFO.package_sel) gates pin availability.
chip-rp2350b = ["rp", "embassy-rp/rp235xb", "embedded-platform"]
# RP2040 (Cortex-M0+, 30 GPIO, no PIO2). Requires target thumbv6m-none-eabi.
chip-rp2040 = ["rp", "embassy-rp/rp2040", "embedded-platform"]

# BCM2712 (Cortex-A76, aarch64). Requires target aarch64-unknown-none.
# Minimal — no embassy, no cortex-m. Bare-metal from scratch.
chip-bcm2712 = ["portable-atomic", "sha2", "embedded-platform"]

# Board-level selection for BCM2712 targets.
# board-cm5: Real Raspberry Pi 5 / CM5 hardware (kernel loaded at 0x80000).
# Without board-cm5: QEMU virt machine (kernel loaded at 0x40080000).
board-cm5 = ["chip-bcm2712"]

# Linux hosted (aarch64 userspace). Uses std — no embassy, no cortex-m.
# Loads real PIC .fmod modules and runs the same scheduler/graph model.
host-linux = ["portable-atomic", "sha2", "env_logger", "libc"]

# Require every loaded module to carry a valid Ed25519 signature from the
# provisioned root-of-trust key (see hal::otp_read_signing_key). When
# unset, the loader accepts unsigned modules; set it for production images
# built from a signed module tree.
enforce_signatures = []

[build-dependencies]
toml = "1.1.2"
serde = { version = "1.0.228", features = ["derive"] }

[profile.release]
debug = 2
lto = false
opt-level = 2

[profile.dev]
debug = 2
opt-level = 1

[workspace]
members = ["tools"]
