[package]
name = "fluxor"
description = "Fluxor"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/nanocloudio/fluxor"

[[bin]]
name = "fluxor"
path = "src/main.rs"
# `src/main.rs` is `#![no_std]` and resolves its platform from the
# `rp` / `chip-bcm2712` features. `embedded-platform` is the umbrella
# any embedded chip feature pulls in; under `host-linux` the bin is
# skipped so cargo test can compile against the lib alone.
required-features = ["embedded-platform"]

[[bin]]
name = "fluxor-linux"
path = "src/platform/linux.rs"
required-features = ["host-linux"]

[lib]
path = "src/lib.rs"
# Default to `rlib` only — that's what every embedded target and
# cargo-test consume. The wasm build requests `cdylib` on the side
# via `cargo rustc --crate-type=cdylib` (see the wasm branches of
# `firmware` and `lint` in the Makefile). Listing `cdylib` here
# unconditionally would emit a `dropping unsupported crate type`
# warning from cargo on every embedded build.
crate-type = ["rlib"]

[dependencies]
# --- RP-family dependencies (Cortex-M targets) ---
# Async executor for main task and logger task.
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "defmt"], optional = true }
# Timers for async delays between SD reads.
embassy-time = { version = "0.5.1", features = ["defmt", "defmt-timestamp-uptime"], optional = true }
# RP2350 HAL (SPI, GPIO, USB, DMA, clocks).
# Chip variant (rp235xa or rp235xb) selected via features below.
embassy-rp = { version = "0.10.0", features = ["defmt", "time-driver", "critical-section-impl", "rt", "unstable-pac"], optional = true }
# `fixed` is pulled in transitively via embassy-rp. The lockfile
# pins it to 1.29.0 because 1.31.0+ requires rustc 1.93, while the
# installed toolchain is 1.92. `cargo update fixed` will try to bump
# to 1.31 — keep it at 1.29 (or whatever is the latest version
# supporting the installed toolchain) until either rustc moves to
# 1.93+ or embassy-rp's MSRV-floor catches up.
# USB device stack for CDC logging.
embassy-usb = { version = "0.6.0", features = ["defmt"], optional = true }
# USB serial logger implementation.
embassy-usb-logger = { version = "0.6.0", optional = true }
# Minimal async yield helper for syscall polling loops.
embassy-futures = { version = "0.1.2", optional = true }
# Async primitives (signals, channels, mutexes).
embassy-sync = { version = "0.8.0", optional = true }
# Cortex-M core utilities (used for low-level delays).
cortex-m = { version = "0.7.7", optional = true }
# Cortex-M runtime and startup.
cortex-m-rt = { version = "0.7.5", optional = true }
# Static initialization for shared peripherals.
static_cell = { version = "2.1.1", optional = true }
# Structured logging facade used by embassy-usb-logger.
log = "0.4.29"
# defmt logging backend (required by selected embassy features).
defmt = { version = "1.0.1", optional = true }
# RTT logger for early debug output.
defmt-rtt = { version = "1.1.0", optional = true }
# Panic handler with defmt output.
panic-probe = { version = "1.0.0", features = ["print-defmt"], optional = true }
sha2 = { version = "0.11.0", default-features = false, optional = true }
env_logger = { version = "0.11", optional = true }
libc = { version = "0.2", optional = true }
embedded-io-async = { version = "0.7.0", optional = true }
# Portable atomics with CAS emulation for thumbv6m (RP2040 Cortex-M0+).
# On thumbv8m (RP2350) this is a zero-cost pass-through.
portable-atomic = { version = "1.13.1", default-features = false, optional = true }

# ── host-window: linux_display interactive backend ─────────────────────
# Pure-Rust window stack: winit owns the OS surface, softbuffer blits a
# CPU framebuffer into it. Both gated behind the `host-window` feature
# so the default `host-linux` build doesn't pull them in.
winit = { version = "0.30", optional = true }
softbuffer = { version = "0.4", optional = true }

# ── host-playback: linux_audio interactive backend ─────────────────────
# CPAL is the cross-platform audio dep — Linux uses ALSA under the
# hood. Gated behind `host-playback` so file-mode capture builds stay
# dep-free.
cpal = { version = "0.15", optional = true }

# ── host-image: host_image_codec (JPEG/PNG/BMP → RGB565) ───────────────
# `image` brings every default decoder; trimmed to JPEG/PNG/BMP/GIF
# below since fluxor's display sinks consume RGB565 from any of them.
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "bmp", "gif"], optional = true }

[features]
default = ["chip-rp2350b"]

# Umbrella feature pulled in by every embedded chip feature; gates the
# `#![no_std]` `fluxor` binary so hosted builds can compile against the
# lib alone.
embedded-platform = []

# RP-family shared dependencies (pulled in by any chip-rp* feature)
rp = [
    "embassy-executor", "embassy-time", "embassy-rp", "embassy-usb",
    "embassy-usb-logger", "embassy-futures", "embassy-sync",
    "cortex-m", "cortex-m-rt", "static_cell",
    "defmt", "defmt-rtt", "panic-probe", "sha2", "embedded-io-async",
    "portable-atomic",
]

# Single binary for both RP2350A and RP2350B. Always compile with B (superset).
# Runtime silicon detection (SYSINFO.package_sel) gates pin availability.
chip-rp2350b = ["rp", "embassy-rp/rp235xb", "embedded-platform"]
# RP2040 (Cortex-M0+, 30 GPIO, no PIO2). Requires target thumbv6m-none-eabi.
chip-rp2040 = ["rp", "embassy-rp/rp2040", "embedded-platform"]

# BCM2712 (Cortex-A76, aarch64). Requires target aarch64-unknown-none.
# Minimal — no embassy, no cortex-m. Bare-metal from scratch.
chip-bcm2712 = ["portable-atomic", "sha2", "embedded-platform"]

# Board-level selection for BCM2712 targets.
# board-cm5: Real Raspberry Pi 5 / CM5 hardware (kernel loaded at 0x80000).
# Without board-cm5: QEMU virt machine (kernel loaded at 0x40080000).
board-cm5 = ["chip-bcm2712"]

# Linux hosted (aarch64 userspace). Uses std — no embassy, no cortex-m.
# Loads real PIC .fmod modules and runs the same scheduler/graph model.
host-linux = ["portable-atomic", "sha2", "env_logger", "libc"]

# WASM target. Builds the kernel as a wasm32-unknown-unknown library.
# A small bootstrap shim (browser, wasmtime, edge) provides the host
# imports defined in docs/architecture/wasm_platform.md. See also
# docs/architecture/wasm_browser_host.md for the browser host shape.
# This feature gates the kernel into the same code paths as
# `host-linux` for std/no-std purposes, except `no_std` and without
# Linux-specific deps.
host-wasm = ["portable-atomic", "sha2"]

# Optional `linux_display` backend: open a real window via winit and
# blit each RGB565 frame through softbuffer. Off by default; file +
# null modes always available.
host-window = ["host-linux", "winit", "softbuffer"]

# Optional `linux_audio` backend: stream PCM into the host audio
# device via CPAL. Off by default; wav + raw + null capture always
# available.
host-playback = ["host-linux", "cpal"]

# Optional `host_image_codec` built-in: decode JPEG/PNG/BMP/GIF into
# RGB565 frames, sized to a target width/height. Lets hosted graphs
# feed real images into the display sink without a board codec.
host-image = ["host-linux", "image"]

# Require every loaded module to carry a valid Ed25519 signature from the
# provisioned root-of-trust key (see hal::otp_read_signing_key). When
# unset, the loader accepts unsigned modules; set it for production images
# built from a signed module tree.
enforce_signatures = []

[build-dependencies]
toml = "1.1.2"
serde = { version = "1.0.228", features = ["derive"] }

# Inherit the workspace lint baseline. Crate-root `#![allow(...)]`
# blocks in `src/lib.rs` and `src/main.rs` relax `unsafe_code` for
# this kernel; every `unsafe { }` block carries its own SAFETY
# comment per the workspace-wide `undocumented_unsafe_blocks` lint.
[lints]
workspace = true

[profile.release]
debug = 2
lto = false
opt-level = 2

[profile.dev]
debug = 2
opt-level = 1

[workspace]
members = ["contracts", "crates/fluxor-abi", "crates/fluxor-sdk", "tools", "modules/foundation/ip", "modules/foundation/http", "modules/foundation/ws_stream", "modules/foundation/tls"]
# `tests/harness` is a self-contained sub-workspace (its Cargo.toml
# declares its own `[workspace]`) that depends on the crates above
# via path. It is intentionally not a member here — host integration
# tests are run from inside `tests/harness` so the rest of the tree
# builds without them present.
exclude = ["tests"]

[workspace.package]
# Shared by every publishable crate via `version.workspace = true`.
# Mirrors `fluxor.toml::[project].version`; publish enforces equality.
version = "0.1.0"

# Workspace-wide lint configuration. Each member inherits this via
# `[lints] workspace = true` and relaxes specific lints per-crate
# where appropriate.
[workspace.lints.rust]
# `unsafe_code = "deny"` keeps every unsafe block locally justified.
# Crates that legitimately use unsafe relax the lint with a single
# crate-root `#![allow(unsafe_code, reason = "...")]`.
unsafe_code               = "deny"
unused_must_use           = "deny"
elided_lifetimes_in_paths = "warn"

[workspace.lints.clippy]
# `priority = -1` ensures group enables apply *before* per-lint
# overrides below — without that, `pedantic = warn` would re-warn
# every lint we explicitly allow further down.
all      = { level = "deny",  priority = -1 }
pedantic = { level = "warn",  priority = -1 }

# Every `#[allow(...)]` must carry a `reason = "..."` clause; the
# hygiene scanner enforces the same on module trees outside the
# cargo workspace. `allow_attributes` is permissive because the
# kernel matrix uses many target-conditional allows on cfg-gated
# items, and `#[expect]` fails the build for configurations where
# the lint doesn't fire.
allow_attributes                = "allow"
allow_attributes_without_reason = "deny"

# Hardened defaults beyond clippy::all.
dbg_macro     = "deny"
todo          = "warn"
unimplemented = "warn"
# `unwrap_used` / `expect_used` / `panic` are permissive workspace-wide:
# the kernel + CLI are crash-on-precondition-violation paths by design
# (boot-time integrity checks panic; CLI exits on bad input). PIC
# library crates opt back in with a crate-root
# `#![deny(clippy::unwrap_used)]` (see `modules/foundation/*/mod.rs`).
#
# `print_stdout` / `print_stderr` are denied so library code doesn't
# print; the `tools` CLI and the `fluxor` host-linux binary relax
# both lints at the crate root.
unwrap_used   = "allow"
expect_used   = "allow"
panic         = "allow"
print_stdout  = "deny"
print_stderr  = "deny"

# Pedantic carve-outs — universally noisy lints suppressed workspace-wide.
module_name_repetitions = "allow"
must_use_candidate      = "allow"
missing_errors_doc      = "allow"
missing_panics_doc      = "allow"
missing_const_for_fn    = "allow"
too_many_lines          = "allow"
# Cast lints fire constantly in low-level code that has to cross
# integer-width boundaries (MMIO, packet field encoding, length
# truncation at protocol limits). Audited individually at each site
# via `as u32` / `as u8` etc.; clippy's blanket warning isn't useful.
cast_possible_truncation = "allow"
cast_possible_wrap       = "allow"
cast_sign_loss           = "allow"
cast_lossless            = "allow"
cast_precision_loss      = "allow"
# Style preferences.
uninlined_format_args     = "warn"  # `format!("{x}")` preferred
doc_markdown              = "allow"  # backtick-around-identifier in doc comments
map_unwrap_or             = "allow"  # `.map(...).unwrap_or(...)` form
manual_let_else           = "allow"  # `match Some(x) { … }` vs `let Some(x) = …`
items_after_statements    = "allow"  # private helpers after the first use
similar_names             = "allow"  # adjacent identifiers that differ by one letter
struct_excessive_bools    = "allow"  # CLI flag structs
unreadable_literal        = "allow"  # `0xDEADBEEF` etc.
needless_pass_by_value    = "allow"  # by-value args at fn boundaries are intentional
redundant_closure_for_method_calls = "allow"
single_match_else         = "allow"
match_same_arms           = "allow"
single_match              = "allow"
needless_raw_string_hashes = "allow"
format_collect            = "allow"
format_push_string        = "allow"  # `s += &format!(...)` style
assigning_clones          = "allow"  # `*lhs = rhs.clone()` micro-opt
inefficient_to_string     = "allow"
useless_let_if_seq        = "allow"
ptr_as_ptr                = "allow"
return_self_not_must_use  = "allow"
ref_as_ptr                = "allow"
bool_to_int_with_if       = "allow"  # `if x { 1 } else { 0 }` style
if_not_else               = "allow"  # `if !x { … } else { … }` is fine
manual_string_new         = "allow"  # `String::from("")` etc.
elidable_lifetime_names   = "allow"  # explicit lifetimes for clarity
explicit_iter_loop        = "allow"  # `for x in v.iter()` is fine
unnecessary_wraps         = "allow"  # functions that return Result<T> for uniformity
# Further pedantic noise — see the rationale-by-category above.
implicit_clone                        = "allow"  # `to_vec()` on deref
checked_conversions                   = "allow"  # manual checked casts
many_single_char_names                = "allow"
used_underscore_binding               = "allow"
default_trait_access                  = "allow"  # `Map::new()` vs `Map::default()`
unnested_or_patterns                  = "allow"
multiple_unsafe_ops_per_block         = "allow"
ref_option                            = "allow"  # `&Option<T>` vs `Option<&T>`
case_sensitive_file_extension_comparisons = "allow"
filter_map_next                       = "allow"
no_effect_underscore_binding          = "allow"
large_stack_arrays                    = "allow"  # PIC modules carry sizable buffers
wildcard_enum_match_arm               = "allow"
stable_sort_primitive                 = "allow"
trivially_copy_pass_by_ref            = "allow"
doc_link_with_quotes                  = "allow"
semicolon_if_nothing_returned         = "allow"
needless_for_each                     = "allow"
collapsible_else_if                   = "allow"
collapsible_match                     = "allow"
unused_self                           = "allow"
match_wildcard_for_single_variants    = "allow"
struct_field_names                    = "allow"
manual_range_contains                 = "allow"
ignored_unit_patterns                 = "allow"
range_plus_one                        = "allow"
borrow_as_ptr                         = "allow"
verbose_bit_mask                      = "allow"

# Unsafe hygiene: every `unsafe { }` block carries a `// SAFETY: …`
# comment immediately above (multi-line is fine — clippy walks
# contiguous comment lines). Modules outside the cargo workspace
# (`modules/sdk/*`, `modules/drivers/*`, `modules/app/*`) build via
# `rustc` direct calls and don't run clippy; their SAFETY discipline
# is enforced by review.
undocumented_unsafe_blocks    = "deny"
# Kernel pointer math repeatedly casts u8 buffers to typed structs
# (BlockHeader, syscall args, MMIO descriptors). Alignment is hand-
# verified at allocation; the lint can't see that invariant.
cast_ptr_alignment            = "allow"
# `#[inline(always)]` is intentional in the kernel hot-paths
# (step-guard, syscall fast-path). The lint's "usually a bad idea"
# warning is the wrong default for a kernel.
inline_always                 = "allow"
# Some `pub` structs carry `_`-prefixed padding/reserved fields that
# the host can read but isn't expected to write.
pub_underscore_fields         = "allow"
# Style: `} else { ... }` after a returning if-branch.
redundant_else                = "allow"
# Style.
ptr_cast_constness            = "allow"  # `as *const u8` ↔ `as *mut u8`
enum_glob_use                 = "allow"  # `use Foo::*` is acceptable
wildcard_imports              = "allow"
needless_continue             = "allow"
comparison_chain              = "allow"  # `if a < b … else if a == b …` form
unchecked_time_subtraction    = "allow"  # internal monotonic clocks won't wrap
