[package]
name = "fluxor-tools"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nanocloudio/fluxor"
description = "Host-side tools for Fluxor firmware configuration"

[[bin]]
name = "fluxor"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
clap = { version = "4.6.0", features = ["derive"] }
libc = "0.2"
regex = "1.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"  # deprecated but functional; consider serde_yml for future
sha2 = "0.11.0"
thiserror = "2.0.18"
toml = "1.1.2"
