[package]
name = "fluxor-tools"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nanocloudio/fluxor"
description = "Host-side tools for Fluxor firmware configuration"

[[bin]]
name = "fluxor"
path = "src/main.rs"

# Rig backend executables. Discovered by name (`<surface>-<name>`)
# on the rig backend search path; the Makefile's `install-rig-backends`
# target symlinks them into `$XDG_DATA_HOME/fluxor/backends/` after a
# release build.
[[bin]]
name = "telemetry-monitor_udp"
path = "src/bin/telemetry_monitor_udp.rs"

# Library target — gives integration tests under `tools/tests/` and
# the auxiliary backend binaries under `src/bin/` access to individual
# tool modules. `src/main.rs` remains the CLI entry point;
# `src/lib.rs` re-exports a curated subset.
[lib]
name = "fluxor_tools"
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
clap = { version = "4.6.0", features = ["derive"] }
libc = "0.2"
regex = "1.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"  # deprecated but functional; consider serde_yml for future
sha2 = "0.11.0"
thiserror = "2.0.18"
toml = "1.1.2"
