[package]
name              = "fluxor-tools"
version.workspace = true
edition           = "2021"
license           = "MIT OR Apache-2.0"
repository        = "https://github.com/nanocloudio/fluxor"
description       = "Host-side tools for Fluxor firmware configuration"

[[bin]]
name = "fluxor"
path = "src/main.rs"

# Rig backend executables. Discovered by name (`<surface>-<name>`)
# on the rig backend search path; the Makefile's `install-rig-backends`
# target symlinks them into `$XDG_DATA_HOME/fluxor/backends/` after a
# release build.
[[bin]]
name = "telemetry-monitor_udp"
path = "src/bin/telemetry_monitor_udp.rs"

# HTTPS load-probe observer: drives concurrent TLS clients against the
# rig's HTTPS endpoint and emits NDJSON bytes per phase so the matcher
# can pin throughput, concurrency, and handshake-rate floors.
# Gated behind the `observe-https-load` feature so the default fluxor
# CLI build doesn't pull in tokio + reqwest + rustls. Build with:
#   cargo build --release -p fluxor-tools --bin observe-https_load \
#               --features observe-https-load
[[bin]]
name = "observe-https_load"
path = "src/bin/observe_https_load.rs"
required-features = ["observe-https-load"]

[features]
default = []
# Pulls async + HTTPS client deps in for `observe-https_load` only.
# The probe drives `tokio::net::TcpStream` + `tokio_rustls` directly
# so it can measure each stage (TCP, TLS handshake, request send,
# first byte, body complete) independently. reqwest used to sit
# between probe and rig but added ~60ms per request on the
# fresh-Client path — hiding the rig's real performance — so it was
# removed.
observe-https-load = [
    "dep:tokio",
    "dep:futures-util",
    "dep:rustls",
    "dep:tokio-rustls",
]

# Library target — gives integration tests under `tools/tests/` and
# the auxiliary backend binaries under `src/bin/` access to individual
# tool modules. `src/main.rs` remains the CLI entry point;
# `src/lib.rs` re-exports a curated subset.
[lib]
name = "fluxor_tools"
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
clap = { version = "4.6.0", features = ["derive"] }
fluxor-contracts = { path = "../contracts" }
libc = "0.2"
regex = "1.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"  # deprecated but functional; consider serde_yml for future
semver = "1.0"
sha2 = "0.11.0"
# `proc-macro2` is a transitive dep of syn; pulling it in directly lets
# us enable the `span-locations` feature so `Span::start()` yields
# stable line numbers (otherwise the API is nightly-only).
proc-macro2 = { version = "1", features = ["span-locations"] }
# `full` enables the items/attrs/tokens needed by the hygiene scanner;
# `extra-traits` exposes Debug/Eq for tests asserting on parsed nodes.
syn = { version = "2.0", features = ["full", "extra-traits", "parsing", "visit"] }
thiserror = "2.0.18"
toml = "1.1.2"
# Recursive directory walk for the hygiene scanner. The std-only path
# (`fs::read_dir` recursion) reimplements its filter/skip logic; this
# keeps the scanner focused on AST work.
walkdir = "2.5"

# Optional deps used only by the `observe-https_load` rig backend.
# Pulled in via the `observe-https-load` feature so the default
# fluxor CLI build stays lean. The probe drives raw TCP + TLS so we
# get clean per-stage timing — no client library between us and the
# rig hiding overhead in `Client::new()` or connection-pool
# bookkeeping. We accept invalid certs (the rig fixture's self-signed
# cert is part of the test setup).
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "io-util", "signal", "net"], optional = true }
futures-util = { version = "0.3", optional = true }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"], optional = true }
tokio-rustls = { version = "0.26", default-features = false, features = ["tls12", "ring"], optional = true }

[dev-dependencies]
# Used by test-side `#[cfg(test)]` helpers to construct auto-cleaning
# scratch directories instead of leaking `std::env::temp_dir().join(...)`
# paths to `/tmp`. Production tools that manage long-lived state in
# `/tmp` (rig record artefacts, lock files) stay on the raw API
# deliberately — those paths are part of the contract with downstream
# tooling.
tempfile = "3"

# Inherit the workspace lint configuration. The tools CLI and
# telemetry monitor are user-facing binaries that print to stdout,
# so they relax `clippy::print_stdout` / `clippy::print_stderr` at
# the crate root in `lib.rs` / `main.rs`.
[lints]
workspace = true
