[package]
name = "fluxor-mod-http"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false
description = "HTTP server / client module — host-test build"

# As with `fluxor-mod-ip`, this file lets the bare-metal `http`
# module crate also build as a host rlib so the test harness can
# link it. The PIC firmware build invokes `rustc` directly against
# `mod.rs` and ignores Cargo.toml, so this addition is purely
# additive.

[lib]
path = "mod.rs"
crate-type = ["rlib"]

[features]
default = []
host-test = []

[dependencies]
fluxor = { path = "../../..", default-features = false, features = ["host-linux"], optional = true }
